chore: NativeFrameNav Uno 4.1.9

--- a/UI/NativeFrameNav/NativeFrameNav.UWP/NativeFrameNav.Uwp.csproj
+++ b/UI/NativeFrameNav/NativeFrameNav.UWP/NativeFrameNav.Uwp.csproj
@@ -10,15 +10,15 @@
       -->
       <Version>6.2.11</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>4d77aabf-e5ad-4d71-a999-f692c9a2f9ce</ProjectGuid>
+    <ProjectGuid>{4D77AABF-E5AD-4D71-A999-F692C9A2F9CE}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NativeFrameNav</RootNamespace>
