chore: SkiaSharpTest Uno 4.1.9
Last stable SkiaSharp doesn't work. So, used the last preview.

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
@@ -8,18 +8,18 @@
 			you need to make sure that the version provided here matches https://github.com/onovotny/MSBuildSdkExtras/blob/master/Source/MSBuild.Sdk.Extras/DefaultItems/ImplicitPackages.targets#L11.
 			This is not an issue when libraries are referenced through nuget packages. See https://github.com/nventive/Uno/issues/446 for more details.
 			-->
-      <Version>6.2.2</Version>
+      <Version>6.2.13</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp">
-      <Version>2.80.3-preview.93</Version>
+      <Version>2.88.0-preview.232</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views">
-      <Version>2.80.3-preview.93</Version>
+      <Version>2.88.0-preview.232</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,7 +31,7 @@
     <AssemblyName>SkiaSharpTest</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
