--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Linux.FrameBuffer/SkiaSharpTest.Skia.Linux.FrameBuffer.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Linux.FrameBuffer/SkiaSharpTest.Skia.Linux.FrameBuffer.csproj
@@ -13,11 +13,12 @@
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.80.3-preview.93" />
+		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.0-preview.232" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Linux.FrameBuffer" Version="3.8.0-dev.302" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.0-dev.302" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Linux.FrameBuffer" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" />
 </Project>
