--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/SkiaSharpTest.Skia.WPF.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/SkiaSharpTest.Skia.WPF.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.80.3-preview.93" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.0-preview.232" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.8.0-dev.302" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.0-dev.302" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
