--- a/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.macOS/TheCatApiClient.macOS.csproj
+++ b/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.macOS/TheCatApiClient.macOS.csproj
@@ -67,15 +67,17 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Memory" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Text.Json">
       <Version>4.7.2</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
   <Import Project="..\TheCatApiClient.Shared\TheCatApiClient.Shared.projitems" Label="Shared" Condition="Exists('..\TheCatApiClient.Shared\TheCatApiClient.Shared.projitems')" />
   <ItemGroup>
