chore: TimeEntry Uno 4.1.9

--- a/UI/TimeEntry/TimeEntryUno/TimeEntryUno.UWP/TimeEntryUno.Uwp.csproj
+++ b/UI/TimeEntry/TimeEntryUno/TimeEntryUno.UWP/TimeEntryUno.Uwp.csproj
@@ -5,9 +5,6 @@
     <PackageReference Include="IdentityModel">
       <Version>5.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug">
-      <Version>1.1.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <!-- 
 			If, in the same solution, you are referencing a project that uses https://github.com/onovotny/MSBuildSdkExtras,
@@ -16,16 +13,14 @@
 			-->
       <Version>6.2.12</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.6.0-prerelease.210129001</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.2" />
     <PackageReference Include="System.Text.Json">
-      <Version>6.0.0-preview.1.21102.12</Version>
+      <Version>6.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
