--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
@@ -14,11 +14,12 @@
     <UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Cupertino" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.Cupertino" Version="1.0.0-dev.780" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.8.6" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.6" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" />
 </Project>
