--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Wpf/UnoCupertinoSample.Skia.Wpf.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Wpf/UnoCupertinoSample.Skia.Wpf.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+	<PackageReference Include="Uno.Cupertino" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.Cupertino" Version="1.0.0-dev.780" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.8.6" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.6" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
