--- a/UI/UnoCupertinoSample/UnoCupertinoSample.UWP/UnoCupertinoSample.UWP.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.UWP/UnoCupertinoSample.UWP.csproj
@@ -10,14 +10,12 @@
       -->
       <Version>6.2.11</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml" Version="2.5.0" />
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.Cupertino">
-      <Version>1.0.0-dev.780</Version>
-    </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.8.6" />
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.2" />
+    <PackageReference Include="Uno.Cupertino" Version="1.3.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
