--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Wasm/UnoCupertinoSample.Wasm.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Wasm/UnoCupertinoSample.Wasm.csproj
@@ -36,14 +36,15 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-		<PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Cupertino" Version="1.0.0-dev.780" />
+    <PackageReference Include="Uno.Cupertino" Version="1.3.1" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.8.6" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.6" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
   </ItemGroup>
   <Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems')" />
 </Project>
