--- a/UI/WCTTabView/TabViewSample/TabViewSample.macOS/TabViewSample.macOS.csproj
+++ b/UI/WCTTabView/TabViewSample/TabViewSample.macOS/TabViewSample.macOS.csproj
@@ -70,12 +70,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.0-build.196.g6dcc67b713</Version>
+      <Version>7.1.11</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
   <Import Project="..\TabViewSample.Shared\TabViewSample.Shared.projitems" Label="Shared" Condition="Exists('..\TabViewSample.Shared\TabViewSample.Shared.projitems')" />
   <ItemGroup>
