chore: Update dependencies

--- a/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
@@ -17,8 +17,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.4" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 	</ItemGroup>
@@ -29,12 +29,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.3.8" />
+		<PackageReference Include="Uno.WinUI" Version="4.4.13" />
 		<PackageReference Include="Uno.Core" Version="4.0.1" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.1.0-dev.31" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.1.0-dev.5" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.1.0-dev.5" />
-		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.0.2" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
 	</ItemGroup>
 
 	<Import Project="..\Extensions.winui.props" />
