--- a/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
@@ -17,7 +17,7 @@
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\Commerce.UI\Strings</ResourcesDirectory>
@@ -64,18 +64,18 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources" Version="1.2.0.5" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources" Version="1.4.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <PackageReference Include="Uno.WinUI" Version="4.3.8" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.3.8" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.8" />
+    <PackageReference Include="Uno.WinUI" Version="4.4.13" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.1.0-dev.5" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.1.0-dev.5" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
     <PackageReference Include="Uno.Core" Version="4.0.1" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.1.0-dev.31" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
-    <PackageReference Include="Uno.SourceGenerationTasks" Version="4.0.2" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1" />
+    <PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
   </ItemGroup>
   <Import Project="..\Extensions.winui.props" />
   <ItemGroup>
