--- a/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
@@ -116,16 +116,16 @@
     <BundleResource Include="Resources\Fonts\uno-fluentui-assets.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.3.8" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.3.8" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.8" />
+    <PackageReference Include="Uno.WinUI" Version="4.4.13" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.1.0-dev.5" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.1.0-dev.5" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
     <PackageReference Include="Uno.Core" Version="4.0.1" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.1.0-dev.31" />
-    <PackageReference Include="Uno.SourceGenerationTasks" Version="4.0.2" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
+    <PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
   </ItemGroup>
   <Import Project="..\Extensions.winui.props" />
   <ItemGroup>
