feat: Connecting products to dummyjson.com

--- a/reference/Uno.Extensions.Commerce/Commerce.UI/appsettings.json
+++ b/reference/Uno.Extensions.Commerce/Commerce.UI/appsettings.json
@@ -4,5 +4,9 @@
   },
   "LocalizationConfiguration": {
     "Cultures": [ "en" ]
-  }
+  },
+  "DummyJsonEndpoint": {
+    "Url": "https://DummyJson.com",
+    "UseNativeHandler": false
+  }  
 }
