ci: Trying to fix the build

--- a/reference/Uno.Extensions.Commerce/Commerce.Skia.WPF/Commerce.Skia.WPF.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Skia.WPF/Commerce.Skia.WPF.csproj
@@ -28,4 +28,14 @@
 
 	<Import Project="..\Commerce.UI\Commerce.UI.projitems" Label="Shared" />
 
+	<Target Name="RemoveDuplicateAnalyzers" BeforeTargets="CoreCompile">
+		<!-- Work around https://github.com/dotnet/wpf/issues/6792 -->
+
+		<ItemGroup>
+			<FilteredAnalyzer Include="@(Analyzer-&gt;Distinct())" />
+			<Analyzer Remove="@(Analyzer)" />
+			<Analyzer Include="@(FilteredAnalyzer)" />
+		</ItemGroup>
+	</Target>
+
 </Project>
