chore: makes sure Nuget Updater works with all packages, including Uno.Extensions

--- a/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
@@ -10,6 +10,7 @@
 		<UseWinUI>true</UseWinUI>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
 		<DefaultLanguage>en</DefaultLanguage>
+		<IncludeWinUIExtensions>true</IncludeWinUIExtensions>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -29,15 +30,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.4.13" />
+		<PackageReference Include="Uno.WinUI" Version="4.5.0-dev.562" />
 		<PackageReference Include="Uno.Core" Version="4.0.1" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
 		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
 	</ItemGroup>
-
-	<Import Project="..\Extensions.winui.props" />
 
 	<ItemGroup>
 		<ProjectReference Include="..\Commerce\Commerce.csproj" />
