--- a/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
@@ -12,6 +12,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <ResourcesDirectory>..\Commerce.UI\Strings</ResourcesDirectory>
+    <IncludeWinUIExtensions>true</IncludeWinUIExtensions>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -116,18 +117,17 @@
     <BundleResource Include="Resources\Fonts\uno-fluentui-assets.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.4.13" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
+    <PackageReference Include="Uno.WinUI" Version="4.5.0-dev.562" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
     <PackageReference Include="Uno.Core" Version="4.0.1" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
     <PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
   </ItemGroup>
-  <Import Project="..\Extensions.winui.props" />
   <ItemGroup>
     <ProjectReference Include="..\Commerce\Commerce.csproj">
       <Project>{DE9101A1-60C4-422A-9D85-E396309B1522}</Project>
