--- a/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
@@ -21,6 +21,7 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\Commerce.UI\Strings</ResourcesDirectory>
+    <IncludeWinUIExtensions>true</IncludeWinUIExtensions>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,18 +67,17 @@
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources" Version="1.4.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <PackageReference Include="Uno.WinUI" Version="4.4.13" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
+    <PackageReference Include="Uno.WinUI" Version="4.5.0-dev.562" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.2.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.2.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
     <PackageReference Include="Uno.Core" Version="4.0.1" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.2.0" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1" />
     <PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
   </ItemGroup>
-  <Import Project="..\Extensions.winui.props" />
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
