--- a/reference/Uno.Extensions.Commerce/Directory.Build.props
+++ b/reference/Uno.Extensions.Commerce/Directory.Build.props
@@ -11,4 +11,26 @@
 		<DebugSymbols>True</DebugSymbols>
 		<SynthesizeLinkMetadata>true</SynthesizeLinkMetadata> 
 	</PropertyGroup>
+
+	<ItemGroup Condition="'$(MSBuildProjectName)' == 'Commerce'">
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.2.0-dev.118" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(IncludeWinUIExtensions)' == 'true'">
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.2.0-dev.118" />
+	</ItemGroup>
+
 </Project>
