chore: Upgrade - Material Sample to run with latest uno and latest VS
chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS 2022

chore: Upgrade - Material Sample to run with latest uno and latest VS 2022

chore: Upgrade - Material Sample to run with latest uno and latest VS 2022

chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS

chore: Upgrade - Material Sample to run with latest uno and latest VS

--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF.Host/UnoMaterialSample.Skia.Wpf.Host.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF.Host/UnoMaterialSample.Skia.Wpf.Host.csproj
@@ -7,9 +7,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
