--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
@@ -14,15 +14,30 @@
     <UpToDateCheckInput Include="..\UnoMaterialSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-	<PackageReference Include="Uno.Material" Version="1.3.1" />
-	<PackageReference Include="Uno.Toolkit.UI" Version="1.3.0" />
-    <PackageReference Include="Uno.Toolkit.UI.Material" Version="1.3.0" />
-    <PackageReference Include="Uno.UI" Version="4.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+	<PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
+	<PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />
+	<PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />
+	<PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />
+	<PackageReference Include="SkiaSharp" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
+	<PackageReference Include="System.Memory" Version="4.5.5" />
+	<PackageReference Include="Uno.Material" Version="2.3.0" />
+	<PackageReference Include="Uno.Toolkit.UI" Version="2.3.0" />
+    <PackageReference Include="Uno.Toolkit.UI.Material" Version="2.3.0" />
+    <PackageReference Include="Uno.UI" Version="4.5.14" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Runtime.Skia.Gtk" Version="4.5.14" />
+    <PackageReference Include="Uno.XamlMerge.Task" Version="1.1.0-dev.12" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
 </Project>
