--- a/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
@@ -36,17 +36,18 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.Material" Version="1.3.1" /> 
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+    <PackageReference Include="Uno.Material" Version="2.3.0" /> 
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
-    <PackageReference Include="Uno.Toolkit.UI" Version="1.3.0" />
-    <PackageReference Include="Uno.Toolkit.UI.Material" Version="1.3.0" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.Toolkit.UI" Version="2.3.0" />
+    <PackageReference Include="Uno.Toolkit.UI.Material" Version="2.3.0" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems')" />
 </Project>
