--- a/UI/UnoMaterialSample/UnoMaterialSample.macOS/UnoMaterialSample.macOS.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.macOS/UnoMaterialSample.macOS.csproj
@@ -69,18 +69,27 @@
     <Reference Include="System.Memory" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.Material" Version="1.3.1" />
+    <PackageReference Include="System.Memory">
+      <Version>4.5.5</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.Material" Version="2.3.0" />
     <PackageReference Include="Uno.Toolkit.UI">
-      <Version>1.3.0</Version>
+      <Version>2.3.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.Toolkit.UI.Material">
-      <Version>1.3.0</Version>
+      <Version>2.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Uno.UI" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Lottie">
+      <Version>4.5.14</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Uno.XamlMerge.Task">
+      <Version>1.1.0-dev.12</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
   <ItemGroup>
