chore: Upgrade - Cupertino Sample to run with latest uno and latest VS 2022
chore: Upgrade - Cupertino Sample to run with latest uno and latest VS 2022

--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Wpf/UnoCupertinoSample.Skia.Wpf.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Wpf/UnoCupertinoSample.Skia.Wpf.csproj
@@ -4,12 +4,26 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-	<PackageReference Include="Uno.Cupertino" Version="1.3.1" />
+	<PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
+	<PackageReference Include="SkiaSharp" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.3" />
+	<PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />
+	<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+	<PackageReference Include="Uno.Cupertino" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Uno.Diagnostics.Eventing" Version="2.0.1" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Runtime.Skia.Wpf" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
