--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Tizen/UnoCupertinoSample.Skia.Tizen.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Tizen/UnoCupertinoSample.Skia.Tizen.csproj
@@ -14,13 +14,16 @@
     <UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.Cupertino" Version="1.3.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="SkiaSharp.Views" Version="2.80.3" />
-    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
+    <PackageReference Include="Uno.Cupertino" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
   </ItemGroup>
   <Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" />
 </Project>
