chore: Upgrade - Contoso Sample to run with latest uno and latest VS
chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS 2022

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

chore: Upgrade - Contoso Sample to run with latest uno and latest VS

--- a/UI/UnoContoso/UnoContoso.Repository/UnoContoso.Repository.csproj
+++ b/UI/UnoContoso/UnoContoso.Repository/UnoContoso.Repository.csproj
@@ -6,7 +6,8 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-		<PackageReference Include="Prism.DryIoc.Uno" Version="8.0.0.1909" />
+		<PackageReference Include="Prism.DryIoc.Uno" Version="8.1.97" />
+		<PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.3.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
