--- a/UI/UnoContoso/UnoContoso.iOS/UnoContoso.iOS.csproj
+++ b/UI/UnoContoso/UnoContoso.iOS/UnoContoso.iOS.csproj
@@ -125,13 +125,13 @@
       <Version>6.1.0-build.191.gc988bdd4ff</Version>
     </PackageReference>
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed">
-      <Version>2.0.2-uno.79</Version>
+      <Version>2.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
+    <PackageReference Include="Uno.UI" Version="4.5.12" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Prism.DryIoc.Uno" Version="8.0.0.1909" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.2" />
+    <PackageReference Include="Prism.DryIoc.Uno" Version="8.1.97" />
     <PackageReference Include="Uno.WindowsStateTriggers">
       <Version>1.1.1-uno.132</Version>
     </PackageReference>
