chore: Upgrade - ControlLibrary Sample to run with latest uno and latest VS 2022
This reverts commit 752573997a077e95e205cb512f22139aaefbf4c0.

chore: Upgrade - Toy Car Sample to run with latest uno and latest VS 2022

chore: Upgrade - ControlLibrary Sample to run with latest uno and latest VS 2022

chore: Upgrade - ControlLibrary Sample to run with latest uno and latest VS 2022

--- a/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
+++ b/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
@@ -10,7 +10,8 @@
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
+    <PackageReference Include="Uno.UI" Version="4.5.12" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform " Version="6.0.8" />
