chore: Upgrade - Skottie Sample to run with latest uno and latest VS
chore: Upgrade - Skottie Sample to run with latest uno and latest VS

This reverts commit 752573997a077e95e205cb512f22139aaefbf4c0.

chore: Upgrade - Skottie Sample to run with latest uno and latest VS 2022

chore: Upgrade - Skottie Sample to run with latest uno and latest VS

chore: Upgrade - Toy Car Sample to run with latest uno and latest VS 2022

chore: Upgrade - Skottie Sample to run with latest uno and latest VS

chore: Upgrade - Skottie Sample to run with latest uno and latest VS 2022

--- a/UI/SkottieSample/SkottieSample/SkottieSample.Wasm/SkottieSample.Wasm.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Wasm/SkottieSample.Wasm.csproj
@@ -40,13 +40,14 @@
 		<None Include="wwwroot\web.config" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.58" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.58" />
-		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.3.6" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.3.6" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.6" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.12" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
 	</ItemGroup>
