--- a/UI/SkottieSample/SkottieSample/SkottieSample.Skia.Gtk/SkottieSample.Skia.Gtk.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Skia.Gtk/SkottieSample.Skia.Gtk.csproj
@@ -14,13 +14,13 @@
     <UpToDateCheckInput Include="..\SkottieSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.58" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.58" />
-    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.3.6" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.3.6" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.3.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.5.12" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
   </ItemGroup>
   <Import Project="..\SkottieSample.Shared\SkottieSample.Shared.projitems" Label="Shared" />
 </Project>
